package com.example.Clase34ALoAprendido.model;

public class EstudianteDTO {

    //cuando transportemos info entre las capas no mostremos todos los datos
    private Long id;
    private String nombre;
    private String apellido;

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    public String getApellido() {
        return apellido;
    }

    public void setApellido(String apellido) {
        this.apellido = apellido;
    }
}
